--- a/conf/data_info.master
+++ b/conf/data_info.master
@@ -1,19 +1,19 @@
-tbb_account_IP=jdbc:mysql://rm-uf659r62olq7jk84m.mysql.rds.aliyuncs.com:3306/tbb_account?useUnicode=true&characterEncoding=utf-8
+tbb_account_IP=jdbc:mysql://rm-uf659r62olq7jk84m.mysql.rds.aliyuncs.com:3306/tbb_account
 tbb_account_USER=tbb_account
 tbb_account_PW=tbb_account_root
-tubobo_legwork_IP=jdbc:mysql://rm-uf659r62olq7jk84m.mysql.rds.aliyuncs.com:3306/tubobo_legwork?useUnicode=true&characterEncoding=utf-8
+tubobo_legwork_IP=jdbc:mysql://rm-uf659r62olq7jk84m.mysql.rds.aliyuncs.com:3306/tubobo_legwork
 tubobo_legwork_USER=tubobo_legwork
 tubobo_legwork_PW=tubobo_legwork_root
-tubobo_merchant_IP=jdbc:mysql://rm-uf6piwo3s000100ki.mysql.rds.aliyuncs.com:3306/tubobo_merchant?useUnicode=true&characterEncoding=utf-8
+tubobo_merchant_IP=jdbc:mysql://rm-uf6piwo3s000100ki.mysql.rds.aliyuncs.com:3306/tubobo_merchant
 tubobo_merchant_USER=tubobo_merchant
 tubobo_merchant_PW=tubobo_merchant_root
-tubobo_notity_IP=jdbc:mysql://rm-uf6piwo3s000100ki.mysql.rds.aliyuncs.com:3306/tubobo_notify?useUnicode=true&characterEncoding=utf-8
+tubobo_notity_IP=jdbc:mysql://rm-uf6piwo3s000100ki.mysql.rds.aliyuncs.com:3306/tubobo_notify
 tubobo_notity_USER=tubobo_notify
 tubobo_notity_PW=nofify_root
-tubobo_rider_IP=jdbc:mysql://rm-uf6piwo3s000100ki.mysql.rds.aliyuncs.com:3306/tubobo_rider?useUnicode=true&characterEncoding=utf-8
+tubobo_rider_IP=jdbc:mysql://rm-uf6piwo3s000100ki.mysql.rds.aliyuncs.com:3306/tubobo_rider
 tubobo_rider_USER=tubobo_rider
 tubobo_rider_PW=tubobo_rider_root
-tubobo_task_center_IP=jdbc:mysql://rm-uf6vs076218j890fg.mysql.rds.aliyuncs.com:3306/tubobo_task_center?useUnicode=true&characterEncoding=utf-8
+tubobo_task_center_IP=jdbc:mysql://rm-uf6vs076218j890fg.mysql.rds.aliyuncs.com:3306/tubobo_task_center
 tubobo_task_center_USER=tubobo_task_c
 tubobo_task_center_PW=tubobo_task_center_root
 mongo_express_IP=dds-uf6bc2522e2ca0541.mongodb.rds.aliyuncs.com:3717
